--- a/src/main/resources/templates/galeria-ano.html
+++ b/src/main/resources/templates/galeria-ano.html
@@ -8,19 +8,29 @@
 </head>
 <body>
 
-  <header>
-    <div class="logo"><a href="/">LOGO</a></div>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/torneios">Torneios</a></li>
-        <li><a href="/galeria">Galeria</a></li>
-        <li><a href="/quem_somos">Quem Somos</a></li>
-        <li><a href="/patrocinadores">PATROCINADORES</a></li>
-        <li><a href="/acoes_futuras">Futuras Ações</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+        <div class="logo">
+            <a href="/"> <img src="/img/logo/logo.png" alt="Home">
+            </a>
+        </div>
+
+        <nav class="navbar">
+            <button class="hamburger-menu" id="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+
+            <ul class="nav-links" id="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="/torneios">Torneios</a></li>
+                <li><a href="/galeria">Galeria</a></li>
+                <li><a href="/quem_somos">Quem Somos</a></li>
+                <li><a href="/patrocinadores">PATROCINADORES</a></li>
+                <li><a href="/acoes_futuras">Futuras Ações</a></li>
+            </ul>
+        </nav>
+    </header>
 
   <main class="galeria-ano">
     <h1 th:text="'Fotos do ano de ' + ${ano}">Fotos</h1>
@@ -63,6 +73,12 @@
         modal.style.display = "none";
         }
     };
+
+        const hamburgerMenu = document.getElementById('hamburger-menu');
+    const navLinks = document.getElementById('nav-links');
+
+        hamburgerMenu.addEventListener('click', () => {
+        navLinks.classList.toggle('active');});
     </script>
 
 
