--- a/src/main/resources/templates/galeria.html
+++ b/src/main/resources/templates/galeria.html
@@ -8,19 +8,29 @@
 </head>
 <body>
 
-  <header>
-    <div class="logo"><a href="/">LOGO</a></div>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/torneios">Torneios</a></li>
-        <li><a href="/galeria">Galeria</a></li>
-        <li><a href="/quem_somos">Quem Somos</a></li>
-        <li><a href="/patrocinadores">Patrocinadores</a></li>
-        <li><a href="/acoes_futuras">Futuras Ações</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+        <div class="logo">
+            <a href="/"> <img src="/img/logo/logo.png" alt="Home">
+            </a>
+        </div>
+
+        <nav class="navbar">
+            <button class="hamburger-menu" id="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+
+            <ul class="nav-links" id="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="/torneios">Torneios</a></li>
+                <li><a href="/galeria">Galeria</a></li>
+                <li><a href="/quem_somos">Quem Somos</a></li>
+                <li><a href="/patrocinadores">PATROCINADORES</a></li>
+                <li><a href="/acoes_futuras">Futuras Ações</a></li>
+            </ul>
+        </nav>
+    </header>
 
   <main class="galeria-principal">
     <section class="hero-galeria">
@@ -55,21 +65,12 @@
       <span class="close-anos">&times;</span>
       <h2>Escolha um Ano ou Evento</h2>
       <div class="lista-anos">
-        <a href="/galeria/2022" class="ano-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="2022">
-          <span>2022</span>
-        </a>
-        <a href="/galeria/2023" class="ano-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="2022">
-          <span>2023</span>
-        </a>
+        
+
         <a href="/galeria/2024" class="ano-item">
           <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="2022">
           <span>2024</span>
         </a>
-        <a href="/galeria/evento-especial" class="ano-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="2022">
-          <span>Evento Especial</span>
         </a>
       </div>
     </div>
@@ -91,6 +92,12 @@
         e.target.style.display = 'none';
       }
     });
+
+        const hamburgerMenu = document.getElementById('hamburger-menu');
+    const navLinks = document.getElementById('nav-links');
+
+    hamburgerMenu.addEventListener('click', () => {
+    navLinks.classList.toggle('active');});
   </script>
 
 </body>
