--- a/src/main/resources/templates/quem_somos.html
+++ b/src/main/resources/templates/quem_somos.html
@@ -7,19 +7,29 @@
   <link rel="stylesheet" th:href="@{/css/style_quem_somos.css}">
 </head>
 <body>
-  <header>
-    <div class="logo"><a href="/">LOGO</a></div>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/torneios">Torneios</a></li>
-        <li><a href="/galeria">Galeria</a></li>
-        <li><a href="/quem-somos" class="ativo">Quem Somos</a></li>
-        <li><a href="/patrocinadores">PATROCINADORES</a></li>
-        <li><a href="/acoes_futuras">Futuras Ações</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+        <div class="logo">
+            <a href="/"> <img src="/img/logo/logo.png" alt="Home">
+            </a>
+        </div>
+
+        <nav class="navbar">
+            <button class="hamburger-menu" id="hamburger-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+
+            <ul class="nav-links" id="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="/torneios">Torneios</a></li>
+                <li><a href="/galeria">Galeria</a></li>
+                <li><a href="/quem_somos">Quem Somos</a></li>
+                <li><a href="/patrocinadores">PATROCINADORES</a></li>
+                <li><a href="/acoes_futuras">Futuras Ações</a></li>
+            </ul>
+        </nav>
+    </header>
 
   <main>
     <section class="hero-quem-somos">
@@ -65,6 +75,13 @@
         e.target.style.display = 'none';
       }
     });
+
+    const hamburgerMenu = document.getElementById('hamburger-menu');
+    const navLinks = document.getElementById('nav-links');
+
+    
+            hamburgerMenu.addEventListener('click', () => {
+        navLinks.classList.toggle('active'); });
   </script>
 </body>
 </html>
