Atualizando arquivos de configuração, templates e estilos

--- a/src/main/resources/templates/patrocinadores.html
+++ b/src/main/resources/templates/patrocinadores.html
@@ -342,6 +342,30 @@
     <p>Apoiador oficial do evento</p>
 </div>
 
+<div class="card" onclick="abrirModal(this)"
+    data-nome="Ninjanegro698"
+    data-telefone="Telefone não fornecido"
+    data-endereco="Endereço não fornecido"
+    data-descricao="Ninjanegro698 é um verdadeiro exemplo de dedicação e multifacetismo, destacando-se em diversos campos de atuação e com conquistas que transcendem as expectativas. Com 1,83m de altura e uma mente afiada, ele possui um QI de 125 pontos, que o capacita a se destacar em diversas disciplinas. Sua trajetória é marcada por conquistas acadêmicas e esportivas, sendo mendalhista da OBA (Olimpíada Brasileira de Astronomia) e da OBMEP (Olimpíada Brasileira de Matemática das Escolas Públicas). Como matemático, filósofo e cientista da computação, Ninjanegro698 se dedica ao estudo profundo das ciências e da razão, sempre em busca de novas soluções e ideias inovadoras. Além de sua vasta formação intelectual, ele é um poeta de alma e palavras, expressando suas emoções e visões de mundo por meio da arte literária. Fluente em russo, inglês, espanhol e japonês, ele é um verdadeiro poliglota, capaz de comunicar-se com o mundo em diferentes idiomas, o que reflete sua natureza global e sua curiosidade intelectual. No mundo dos jogos, Ninjanegro698 também brilha: platina no League of Legends, com 5 Clashes ganhos e 10.000 troféus no Clash Royale, sua habilidade no cenário competitivo é indiscutível. No campo esportivo, Ninjanegro698 se destaca como meia-atacante no futebol, central no vôlei e armador no basquete, provando que sua energia e dedicação não se limitam ao mundo digital. Com uma filosofia esquerda radical full focado e try hard, ele busca transformar o mundo ao seu redor com seu conhecimento, habilidades e ideias. Nas ruas, é conhecido por seus títulos de rei do sexo, apaixonado por lésbicas e senhor da verdade, refletindo seu caráter ousado e sem medo de desafiar os padrões estabelecidos. Convidado para patrocinar eventos que buscam excelência e inovação, Ninjanegro698 é, sem dúvida, um exemplo de versatilidade, competência e paixão em tudo o que faz."
+    data-imagem="https://i.postimg.cc/Y91ZS3FV/Imagem-do-Whats-App-de-2025-10-15-s-12-58-36-76463446.jpg">
+    <img src="https://i.postimg.cc/Y91ZS3FV/Imagem-do-Whats-App-de-2025-10-15-s-12-58-36-76463446.jpg" alt="Ninjanegro698">
+    <h2>Ninjanegro698</h2>
+    <p>Apoiador oficial do evento</p>
+    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/guibas698/" target="_blank">guibas698</a></p>
+</div>
+
+<div class="card" onclick="abrirModal(this)"
+    data-nome="Pedro"
+    data-telefone="Telefone não fornecido"
+    data-endereco="Endereço não fornecido"
+    data-descricao="Pedro é um verdadeiro mestre em sua arte. Com 1,80m de altura e impressionantes 400 pontos de QI, ele combina inteligência estratégica com habilidades excepcionais no mundo dos jogos. Com uma carreira sólida de **10 anos como mestre**, Pedro é conhecido por dominar a **jungla de Summoner's Rift** como ninguém. Sua especialidade são os campeões **Lee Sin** e **Shaco**, onde ele se destaca como **main** desses campeões. Sua habilidade e dedicação o levaram a conquistar **7 Clashes**, solidificando seu status de **rei do banheirão do açaí**. Além de ser um estrategista imbatível no jogo, Pedro também é um exemplo de excelência em sua profissão, sendo o **melhor repositor da cidade**."
+    data-imagem="https://i.postimg.cc/RFcy0RtY/Imagem-do-Whats-App-de-2025-10-15-s-12-58-56-e49be838.jpg">
+    <img src="https://i.postimg.cc/RFcy0RtY/Imagem-do-Whats-App-de-2025-10-15-s-12-58-56-e49be838.jpg" alt="Pedro">
+    <h2>Pedro</h2>
+    <p>Apoiador oficial do evento</p>
+    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/pedrohenriquedacruzfarias/" target="_blank">pedrohenriquedacruzfarias</a></p>
+</div>
+
 
     </section>
   </main>
